# binance-spot-connector-rust

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yaml
examples/: Cargo.toml  hyper.rs  tokio_tungstenite.rs  tungstenite.rs  ureq.rs
examples/isolated_margin_stream/: close_listen_key.rs  new_listen_key.rs  renew_listen_key.rs
examples/margin/: bnb_burn_status.rs  isolated_margin_account.rs  isolated_margin_account_limit.rs  isolated_margin_all_symbols.rs  isolated_margin_disable_account.rs  isolated_margin_enable_account.rs  isolated_margin_fee_data.rs  isolated_margin_symbol.rs  isolated_margin_tier_data.rs  isolated_margin_transfer.rs  isolated_margin_transfer_history.rs  margin_account.rs  margin_account_borrow_repay.rs  margin_all_assets.rs  margin_all_oco_order.rs  margin_all_orders.rs  margin_all_pairs.rs  margin_asset.rs  margin_borrow.rs  margin_borrow_repay_records.rs  margin_cancel_oco_order.rs  margin_cancel_open_orders.rs  margin_cancel_order.rs  margin_dustlog.rs  margin_fee_data.rs  margin_force_liquidation_record.rs  margin_interest_history.rs  margin_interest_rate_history.rs  margin_loan_record.rs  margin_max_borrowable.rs  margin_max_transferable.rs  margin_my_trades.rs  margin_new_oco_order.rs  margin_new_order.rs  margin_oco_order.rs  margin_open_oco_order.rs  margin_open_orders.rs  margin_order.rs  margin_order_count_usage.rs  margin_pair.rs  (+6 more)
examples/margin_stream/: close_listen_key.rs  new_listen_key.rs  renew_listen_key.rs
examples/market/: agg_trades.rs  avg_price.rs  book_ticker.rs  depth.rs  exchange_info.rs  historical_trades.rs  klines.rs  ping.rs  rolling_window_price_change_statistics.rs  ticker_price.rs  ticker_trading_day.rs  ticker_twenty_four_hr.rs  time.rs  trades.rs  ui_klines.rs
examples/stream/: close_listen_key.rs  new_listen_key.rs  renew_listen_key.rs
examples/trade/: account.rs  all_orders.rs  cancel_an_existing_order_and_send_a_new_order.rs  cancel_oco_order.rs  cancel_open_orders.rs  cancel_order.rs  get_allocations.rs  get_commission_rates.rs  get_oco_order.rs  get_oco_orders.rs  get_open_oco_orders.rs  get_order.rs  get_prevented_matches.rs  my_trades.rs  new_oco_order.rs  new_order.rs  new_order_test.rs  new_oto_order.rs  new_otoco_order.rs  open_orders.rs  order_limit_usage.rs
examples/wallet/: account_info.rs  account_snapshot.rs  account_status.rs  api_key_permission.rs  api_trading_status.rs  asset_detail.rs  asset_dividend_record.rs  balance.rs  coin_info.rs  delist_schedule.rs  deposit_address.rs  deposit_address_list.rs  deposit_credit_apply.rs  deposit_history.rs  disable_fast_withdraw.rs  dust_log.rs  dust_transfer.rs  dustable_assets.rs  enable_fast_withdraw.rs  funding_wallet.rs  system_status.rs  trade_fee.rs  transfer_history.rs  universal_transfer.rs  universal_transfer_history.rs  user_asset.rs  withdraw.rs  withdraw_history.rs
src/: lib.rs  tokio_tungstenite.rs  tungstenite.rs  utils.rs  version.rs  websocket.rs
src/http/: credentials.rs  error.rs  method.rs  mod.rs  request.rs
src/hyper/: client.rs  error.rs  mod.rs  response.rs
src/isolated_margin_stream/: close_listen_key.rs  mod.rs  new_listen_key.rs  renew_listen_key.rs
src/margin/: bnb_burn_status.rs  isolated_margin_account.rs  isolated_margin_account_limit.rs  isolated_margin_all_symbols.rs  isolated_margin_disable_account.rs  isolated_margin_enable_account.rs  isolated_margin_fee_data.rs  isolated_margin_symbol.rs  isolated_margin_tier_data.rs  isolated_margin_transfer.rs  isolated_margin_transfer_history.rs  margin_account.rs  margin_account_borrow_repay.rs  margin_all_assets.rs  margin_all_oco_order.rs  margin_all_orders.rs  margin_all_pairs.rs  margin_asset.rs  margin_borrow.rs  margin_borrow_repay_records.rs  margin_cancel_oco_order.rs  margin_cancel_open_orders.rs  margin_cancel_order.rs  margin_dustlog.rs  margin_fee_data.rs  margin_force_liquidation_record.rs  margin_interest_history.rs  margin_interest_rate_history.rs  margin_loan_record.rs  margin_max_borrowable.rs  margin_max_transferable.rs  margin_my_trades.rs  margin_new_oco_order.rs  margin_new_order.rs  margin_oco_order.rs  margin_open_oco_order.rs  margin_open_orders.rs  margin_order.rs  margin_order_count_usage.rs  margin_pair.rs  (+7 more)
src/margin_stream/: close_listen_key.rs  new_listen_key.rs  renew_listen_key.rs
src/market/: agg_trades.rs  avg_price.rs  book_ticker.rs  depth.rs  exchange_info.rs  historical_trades.rs  klines.rs  mod.rs  ping.rs  rolling_window_price_change_statistics.rs  ticker_price.rs  ticker_trading_day.rs  ticker_twenty_four_hr.rs  time.rs  trades.rs  ui_klines.rs
src/market_stream/: agg_trade.rs  avg_price.rs  book_ticker.rs  diff_depth.rs  kline.rs  mini_ticker.rs  mod.rs  partial_depth.rs  rolling_window_ticker.rs  ticker.rs  trade.rs
src/stream/: close_listen_key.rs  mod.rs  new_listen_key.rs  renew_listen_key.rs
src/trade/: account.rs  all_orders.rs  cancel_an_existing_order_and_send_a_new_order.rs  cancel_oco_order.rs  cancel_open_orders.rs  cancel_order.rs  get_allocations.rs  get_commission_rates.rs  get_oco_order.rs  get_oco_orders.rs  get_open_oco_orders.rs  get_order.rs  get_prevented_matches.rs  mod.rs  my_trades.rs  new_oco_order.rs  new_order.rs  new_order_test.rs  new_oto_order.rs  new_otoco_order.rs  open_orders.rs  order.rs  order_limit_usage.rs
src/ureq/: client.rs  error.rs  mod.rs  response.rs
src/user_data_stream/: mod.rs  user_data.rs
src/wallet/: account_info.rs  account_snapshot.rs  account_status.rs  api_key_permission.rs  api_trading_status.rs  asset_detail.rs  asset_dividend_record.rs  balance.rs  coin_info.rs  delist_schedule.rs  deposit_address.rs  deposit_address_list.rs  deposit_credit_apply.rs  deposit_history.rs  disable_fast_withdraw.rs  dust_log.rs  dust_transfer.rs  dustable_assets.rs  enable_fast_withdraw.rs  funding_wallet.rs  mod.rs  system_status.rs  trade_fee.rs  transfer_history.rs  universal_transfer.rs  universal_transfer_history.rs  user_asset.rs  withdraw.rs  withdraw_history.rs
