[package]
name = "binance-connector-rust-examples"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
binance_spot_connector_rust = { path = "..", features = ["full"]}
log = "0.4.14"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.21"
env_logger = "0.9.0"
rust_decimal = "1.24.0"
rust_decimal_macros = "1.24.0"

[[example]]
name="hyper"
path="hyper.rs"

[[example]]
name="ureq"
path="ureq.rs"

[[example]]
name="tokio_tungstenite"
path="tokio_tungstenite.rs"

[[example]]
name="tungstenite"
path="tungstenite.rs"

[[example]]
name="market_ping"
path="market/ping.rs"

[[example]]
name="market_time"
path="market/time.rs"

[[example]]
name="market_exchange_info"
path="market/exchange_info.rs"

[[example]]
name="market_depth"
path="market/depth.rs"

[[example]]
name="market_trades"
path="market/trades.rs"

[[example]]
name="market_historical_trades"
path="market/historical_trades.rs"

[[example]]
name="market_agg_trades"
path="market/agg_trades.rs"

[[example]]
name="market_klines"
path="market/klines.rs"

[[example]]
name="market_avg_price"
path="market/avg_price.rs"

[[example]]
name="market_ticker_twenty_four_hr"
path="market/ticker_twenty_four_hr.rs"

[[example]]
name="market_ticker_price"
path="market/ticker_price.rs"

[[example]]
name="market_book_ticker"
path="market/book_ticker.rs"

[[example]]
name="market_rolling_window_price_change_statistics"
path="market/rolling_window_price_change_statistics.rs"

[[example]]
name="trade_new_order_test"
path="trade/new_order_test.rs"

[[example]]
name="trade_get_order"
path="trade/get_order.rs"

[[example]]
name="trade_cancel_an_existing_order_and_send_a_new_order"
path="trade/cancel_an_existing_order_and_send_a_new_order.rs"

[[example]]
name="trade_new_order"
path="trade/new_order.rs"

[[example]]
name="trade_cancel_order"
path="trade/cancel_order.rs"

[[example]]
name="trade_open_orders"
path="trade/open_orders.rs"

[[example]]
name="trade_cancel_open_orders"
path="trade/cancel_open_orders.rs"

[[example]]
name="trade_all_orders"
path="trade/all_orders.rs"

[[example]]
name="trade_new_oco_order"
path="trade/new_oco_order.rs"

[[example]]
name="trade_get_oco_order"
path="trade/get_oco_order.rs"

[[example]]
name="trade_cancel_oco_order"
path="trade/cancel_oco_order.rs"

[[example]]
name="trade_get_oco_orders"
path="trade/get_oco_orders.rs"

[[example]]
name="trade_get_open_oco_orders"
path="trade/get_open_oco_orders.rs"

[[example]]
name="trade_account"
path="trade/account.rs"

[[example]]
name="trade_my_trades"
path="trade/my_trades.rs"

[[example]]
name="trade_order_limit_usage"
path="trade/order_limit_usage.rs"

[[example]]
name="margin_margin_transfer"
path="margin/margin_transfer.rs"

[[example]]
name="margin_margin_transfer_history"
path="margin/margin_transfer_history.rs"

[[example]]
name="margin_margin_borrow"
path="margin/margin_borrow.rs"

[[example]]
name="margin_margin_loan_record"
path="margin/margin_loan_record.rs"

[[example]]
name="margin_margin_repay"
path="margin/margin_repay.rs"

[[example]]
name="margin_margin_repay_record"
path="margin/margin_repay_record.rs"

[[example]]
name="margin_margin_asset"
path="margin/margin_asset.rs"

[[example]]
name="margin_margin_pair"
path="margin/margin_pair.rs"

[[example]]
name="margin_margin_all_assets"
path="margin/margin_all_assets.rs"

[[example]]
name="margin_margin_all_pairs"
path="margin/margin_all_pairs.rs"

[[example]]
name="margin_margin_price_index"
path="margin/margin_price_index.rs"

[[example]]
name="margin_margin_order"
path="margin/margin_order.rs"

[[example]]
name="margin_margin_new_order"
path="margin/margin_new_order.rs"

[[example]]
name="margin_margin_cancel_order"
path="margin/margin_cancel_order.rs"

[[example]]
name="margin_margin_interest_history"
path="margin/margin_interest_history.rs"

[[example]]
name="margin_margin_force_liquidation_record"
path="margin/margin_force_liquidation_record.rs"

[[example]]
name="margin_margin_account"
path="margin/margin_account.rs"

[[example]]
name="margin_margin_open_orders"
path="margin/margin_open_orders.rs"

[[example]]
name="margin_margin_cancel_open_orders"
path="margin/margin_cancel_open_orders.rs"

[[example]]
name="margin_margin_all_orders"
path="margin/margin_all_orders.rs"

[[example]]
name="margin_margin_new_oco_order"
path="margin/margin_new_oco_order.rs"

[[example]]
name="margin_margin_oco_order"
path="margin/margin_oco_order.rs"

[[example]]
name="margin_margin_cancel_oco_order"
path="margin/margin_cancel_oco_order.rs"

[[example]]
name="margin_margin_all_oco_order"
path="margin/margin_all_oco_order.rs"

[[example]]
name="margin_margin_open_oco_order"
path="margin/margin_open_oco_order.rs"

[[example]]
name="margin_margin_my_trades"
path="margin/margin_my_trades.rs"

[[example]]
name="margin_margin_max_borrowable"
path="margin/margin_max_borrowable.rs"

[[example]]
name="margin_margin_max_transferable"
path="margin/margin_max_transferable.rs"

[[example]]
name="margin_isolated_margin_transfer_history"
path="margin/isolated_margin_transfer_history.rs"

[[example]]
name="margin_isolated_margin_transfer"
path="margin/isolated_margin_transfer.rs"

[[example]]
name="margin_isolated_margin_account"
path="margin/isolated_margin_account.rs"

[[example]]
name="margin_isolated_margin_disable_account"
path="margin/isolated_margin_disable_account.rs"

[[example]]
name="margin_isolated_margin_enable_account"
path="margin/isolated_margin_enable_account.rs"

[[example]]
name="margin_isolated_margin_account_limit"
path="margin/isolated_margin_account_limit.rs"

[[example]]
name="margin_isolated_margin_symbol"
path="margin/isolated_margin_symbol.rs"

[[example]]
name="margin_isolated_margin_all_symbols"
path="margin/isolated_margin_all_symbols.rs"

[[example]]
name="margin_toggle_bnb_burn"
path="margin/toggle_bnb_burn.rs"

[[example]]
name="margin_bnb_burn_status"
path="margin/bnb_burn_status.rs"

[[example]]
name="margin_margin_interest_rate_history"
path="margin/margin_interest_rate_history.rs"

[[example]]
name="margin_margin_fee_data"
path="margin/margin_fee_data.rs"

[[example]]
name="margin_isolated_margin_fee_data"
path="margin/isolated_margin_fee_data.rs"

[[example]]
name="margin_isolated_margin_tier_data"
path="margin/isolated_margin_tier_data.rs"

[[example]]
name="margin_margin_order_count_usage"
path="margin/margin_order_count_usage.rs"

[[example]]
name="margin_margin_dustlog"
path="margin/margin_dustlog.rs"

[[example]]
name="wallet_system_status"
path="wallet/system_status.rs"

[[example]]
name="wallet_coin_info"
path="wallet/coin_info.rs"

[[example]]
name="wallet_account_snapshot"
path="wallet/account_snapshot.rs"

[[example]]
name="wallet_disable_fast_withdraw"
path="wallet/disable_fast_withdraw.rs"

[[example]]
name="wallet_enable_fast_withdraw"
path="wallet/enable_fast_withdraw.rs"

[[example]]
name="wallet_withdraw"
path="wallet/withdraw.rs"

[[example]]
name="wallet_deposit_history"
path="wallet/deposit_history.rs"

[[example]]
name="wallet_withdraw_history"
path="wallet/withdraw_history.rs"

[[example]]
name="wallet_deposit_address"
path="wallet/deposit_address.rs"

[[example]]
name="wallet_account_status"
path="wallet/account_status.rs"

[[example]]
name="wallet_api_trading_status"
path="wallet/api_trading_status.rs"

[[example]]
name="wallet_dust_log"
path="wallet/dust_log.rs"

[[example]]
name="wallet_dustable_assets"
path="wallet/dustable_assets.rs"

[[example]]
name="wallet_dust_transfer"
path="wallet/dust_transfer.rs"

[[example]]
name="wallet_asset_dividend_record"
path="wallet/asset_dividend_record.rs"

[[example]]
name="wallet_asset_detail"
path="wallet/asset_detail.rs"

[[example]]
name="wallet_trade_fee"
path="wallet/trade_fee.rs"

[[example]]
name="wallet_universal_transfer_history"
path="wallet/universal_transfer_history.rs"

[[example]]
name="wallet_universal_transfer"
path="wallet/universal_transfer.rs"

[[example]]
name="wallet_funding_wallet"
path="wallet/funding_wallet.rs"

[[example]]
name="wallet_user_asset"
path="wallet/user_asset.rs"

[[example]]
name="wallet_api_key_permission"
path="wallet/api_key_permission.rs"

[[example]]
name="stream_new_listen_key"
path="stream/new_listen_key.rs"

[[example]]
name="stream_renew_listen_key"
path="stream/renew_listen_key.rs"

[[example]]
name="stream_close_listen_key"
path="stream/close_listen_key.rs"

[[example]]
name="margin_stream_margin_new_listen_key"
path="margin_stream/new_listen_key.rs"

[[example]]
name="margin_stream_margin_renew_listen_key"
path="margin_stream/renew_listen_key.rs"

[[example]]
name="margin_stream_margin_close_listen_key"
path="margin_stream/close_listen_key.rs"

[[example]]
name="isolated_margin_stream_isolated_margin_new_listen_key"
path="isolated_margin_stream/new_listen_key.rs"

[[example]]
name="isolated_margin_stream_isolated_margin_renew_listen_key"
path="isolated_margin_stream/renew_listen_key.rs"

[[example]]
name="isolated_margin_stream_isolated_margin_close_listen_key"
path="isolated_margin_stream/close_listen_key.rs"
